chore(backend): plugin failsafe — `mvn verify` exécute réellement les tests *IT
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>